Selezione, distinzione distanza/mischia

--- a/src/app/edit-character/edit-character.page.html
+++ b/src/app/edit-character/edit-character.page.html
@@ -92,6 +92,11 @@
             </mat-form-field>
           </div>
           <div class="column">
+            <mat-radio-group class="radio-buttons" [(ngModel)]="charToEdit.typeAttack" name="typeAttack_e">
+              <mat-radio-button *ngFor="let type of attackTypes" [value]="type">
+                <i>{{ type }}</i>
+              </mat-radio-button>
+            </mat-radio-group>
           </div>
         </div>
       </div>
