--- a/src/app/add-buff/add-buff.page.html
+++ b/src/app/add-buff/add-buff.page.html
@@ -67,13 +67,22 @@
                    name="extra_attack">
           </mat-form-field>
         </td>
-
         <td>
-          <mat-form-field>
+          <mat-form-field class="ts-buff">
             <mat-label>Tipo</mat-label>
             <mat-select [(ngModel)]="buff.type" name="type">
               <mat-option *ngFor="let t of types" [value]="t">
                 {{ t }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </td>
+        <td>
+          <mat-form-field class="ts-buff">
+            <mat-label>Aumento Taglia</mat-label>
+            <mat-select [(ngModel)]="buff.size" name="size">
+              <mat-option *ngFor="let s of sizes" [value]="s">
+                {{ s }}
               </mat-option>
             </mat-select>
           </mat-form-field>
