--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" id="home-toolbar">
     <button type="button" mat-icon-button (click)="drawer.toggle()">
         <mat-icon aria-label="menu">menu</mat-icon>
     </button>
